# ontime

./: Cargo.toml  LICENSE  README.md
examples/: att.tg  ea.tg  el.tg  explicit.tg  game1.1.tg  game1.2.tg  lines.tg  nl.tg  tg1.tg
src/: formulae.rs  game.rs  lib.rs  main.rs  temporal_graphs.rs
src/parser/: formula.lalrpop  formula_parser.lalrpop  mod.rs  tg_parser.lalrpop
tests/: formula_parser.rs  parser_tests.rs
