[package]
name = "ontime"
version = "0.1.0"
edition = "2024"

# The generated code depends on lalrpop-util.
[dependencies]
lalrpop-util = { version = "0.22", features = ["lexer"] }
clap = { version = "4.4", features = ["derive"] }

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.22.2"
